--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,14 @@
 /* font-family: "Inter", sans-serif;
 font-family: "Poppins", sans-serif; */
 
+/***********************/
+/* Developer Profile   */
+/* Name - Rusho Mrong  */
+/* Email - rushomarak@gmail.com */
+/* Github - https://github.com/rushomrong  */
+/*Please don't copy the code, you are free to see and checkout the code how i designed. If you need the code, you have to share the credit to me*/
+/*******************/
+
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Manrope:wght@200..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 /* global css */
@@ -299,14 +307,14 @@ p.desc {
 .happy-clients {
   width: 100%;
   height: 55.313rem;
-  border: 1px solid red;
+  /* border: 1px solid red; */
   background: #fff;
 }
 
 .clients-reviews {
   margin: 0 auto;
   max-width: 76%;
-  border: 1px solid red;
+  /* border: 1px solid red; */
   height: 47.75rem;
   margin-top: 70px;
 }
@@ -347,4 +355,26 @@ img#cl-img {
   box-sizing: border-box;
   border: 1px solid rgb(189, 189, 189);
   border-radius: 50%;
+}
+
+.clients p.desc {
+  margin-top: 30px;
+}
+
+.r-star {
+  width: 18px;
+  height: 18px;
+  margin: 16px 5px auto;
+}
+
+.stars {
+  justify-content: center;
+}
+
+.clients .h5-title {
+  margin: 15px 0 15px auto;
+  font-family: Poppins;
+  font-size: 14px;
+  font-weight: 600;
+  color: rgb(35, 166, 240);
 }
